--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.9.3",
     "react-icons": "^5.2.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
